--- a/.env
+++ b/.env
@@ -3,5 +3,7 @@ USER_NAME=Legend-Rob-Breedt
 START_DATE=2024-01-01
 #END_DATE
 #REPO_NAME
-PAGE_SIZE=2;
+PAGE_SIZE=100;
 OUTPUT_PATH=../output
+PR_TITLE_MATURITY_LENGTH=40
+COMMENT_MATURITY_LENGTH=40
