--- a/package.json
+++ b/package.json
@@ -1,9 +1,28 @@
 {
   "name": "github-pr-analyser",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/app.ts",
+  "files": [
+    "src"
+  ],
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "lint": "gts lint",
+    "clean": "gts clean",
+    "compile": "tsc",
+    "fix": "gts fix",
+    "prepare": "npm run compile",
+    "pretest": "npm run compile",
+    "posttest": "npm run lint"
+  },
+  "devDependencies": {
+    "gts": "^6.0.2",
+    "@types/node": "^22.7.5",
+    "@babel/core": "^7.26.8",
+    "@babel/preset-env": "^7.26.8",
+    "@babel/preset-typescript": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "jest": "^29.7.0"
   },
   "keywords": [],
   "author": "",
