Added metrics for an authors commit comments, as well as capturing metrics around PR Reviewers. SImplified PRComments as just grouped all comment types into one bucket. Adjusted PR Title to take both the title and body into account. Maturity calculation default set to 80 now. There still appears to be a bug in calculation of comment counts.

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ USER_NAME=Legend-Rob-Breedt
 START_DATE=2024-01-01
 #END_DATE
 #REPO_NAME
-PAGE_SIZE=1;
+PAGE_SIZE=100;
 OUTPUT_PATH=../output
-PR_TITLE_MATURITY_LENGTH=40
-COMMENT_MATURITY_LENGTH=40
+#PR_TITLE_MATURITY_LENGTH
+#COMMENT_MATURITY_LENGTH
