Made changes to identify valid PRs using lines changed and number of files changed. Added retry strategy for GraphQL queries that fail.
Signed-off-by: Rob Breedt <rob.breedt@l1.com>

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-#ORG_NAME=NET_MANAGEMENT
-USER_NAME=Legend-Rob-Breedt
-START_DATE=2024-01-01
+ORG_NAME=NetManagement
+#USER_NAME=Legend-Rob-Breedt
+START_DATE=2024-06-20
 #END_DATE
-#REPO_NAME
+REPO_NAME=opengine-platform
 PAGE_SIZE=100;
-OUTPUT_PATH=../output
+OUTPUT_PATH=../output/
 #PR_TITLE_MATURITY_LENGTH
 #COMMENT_MATURITY_LENGTH
