Added Prettier and ESLint and did a cleanup.
Signed-off-by: Rob Breedt <rob.breedt@l1.com>

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,10 @@
 {
-  "extends": "./node_modules/gts/"
+  "root": true,
+  "extends": ["eslint:recommended", "prettier"],
+  "ignorePatterns": ["**/node_modules/**", "**/dist/**"],
+  "settings": {
+    "next": {
+      "rootDir": ["apps/*/"]
+    }
+  }
 }
