--- a/package.json
+++ b/package.json
@@ -1,35 +1,44 @@
 {
   "name": "github-pr-analyser",
   "version": "1.0.0",
+  "engines": {
+    "node": ">18.0.0"
+  },
   "main": "src/app.ts",
   "files": [
     "src"
   ],
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "lint": "gts lint",
-    "clean": "gts clean",
     "compile": "tsc",
-    "fix": "gts fix",
     "prepare": "npm run compile",
     "pretest": "npm run compile",
-    "posttest": "npm run lint"
+    "posttest": "npm run lint",
+    "lint": "npx eslint src", "lint:fix": "npm run lint -- --fix", "prettier": "npx prettier src test --check", "prettier:fix": "npm run prettier -- --write", "format": "npm run prettier:fix && npm run lint:fix"
   },
   "devDependencies": {
-    "gts": "^6.0.2",
-    "@types/node": "^22.7.5",
     "@babel/core": "^7.26.8",
     "@babel/preset-env": "^7.26.8",
     "@babel/preset-typescript": "^7.26.0",
+    "@eslint/js": "^9.20.0",
+    "@types/node": "^22.7.5",
     "babel-jest": "^29.7.0",
-    "jest": "^29.7.0"
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^10.0.1",
+    "globals": "^15.15.0",
+    "install": "0.13.0",
+    "jest": "^29.7.0",
+    "npm": "11.1.0",
+    "typescript-eslint": "^8.24.1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "rotating-file-stream": "^3.2.6",
     "tsc": "^2.0.4",
+    "tslog": "^4.9.3",
     "typescript": "^5.7.3"
   }
 }
